# kitchen_timer

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
app/: CMakeLists.txt  Kconfig
boards/: rpi_pico.overlay
electronics/datasheets_and_images/: BAT54_schottky
electronics/kitchen_timer/: charging_and_audio.kicad_sch  fp-info-cache  fp-lib-table  kitchen_timer.kicad_pcb  kitchen_timer.kicad_prl  kitchen_timer.kicad_pro  kitchen_timer.kicad_sch
electronics/kitchen_timer/gerber_files/: kitchen_timer-B_Cu.gbl  kitchen_timer-B_Mask.gbs  kitchen_timer-B_Paste.gbp  kitchen_timer-B_Silkscreen.gbo  kitchen_timer-Edge_Cuts.gm1  kitchen_timer-F_Cu.gtl  kitchen_timer-F_Mask.gts  kitchen_timer-F_Paste.gtp  kitchen_timer-F_Silkscreen.gto  kitchen_timer-NPTH.drl  kitchen_timer-PTH.drl  kitchen_timer-job.gbrjob
src/: constants.h  display_driver.c  display_driver.h  event_handler.c  event_handler.h  main.c  sound_player.c  sound_player.h  timer.c  timer.h  tones.h
